# sdr

./: .gitignore  .gitkeep  Cargo.toml  README.md
.github/ci/: smoke.toml
.github/workflows/: ci.yml
assets/: README.md  maxillary_sinus.stl
examples/: inspect_real.rs  locate_cavity.rs  manual_needle.toml  maxillary_real.toml  prep_maxillary.rs  render_pool.rs  scene.toml
experiments/: README.md  analyze_stl.py  blend_mesh_bounds.py  blend_objects.txt  blend_parse.py  stl_analysis.txt
src/: grid.rs  lib.rs  main.rs  math.rs  mesh.rs  metrics.rs  output.rs  particles.rs  pressure.rs  recon.rs  render.rs  scene.rs  sdf.rs  sinus.rs  solver.rs  surface_nets.rs
