[package]
name = "sdr"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Hydrodynamic FLIP/PIC simulator of maxillary-sinus irrigation through an oroantral (tooth-socket) communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uselessgoddess/sdr"
readme = "README.md"
keywords = ["fluid-simulation", "flip", "cfd", "medical", "splashsurf"]
categories = ["science", "simulation", "command-line-utilities"]

[lib]
name = "sdr"
path = "src/lib.rs"

[[bin]]
name = "sdr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
approx = "0.5"

# Release profile tuned for a fast solver: aggressive inlining + LTO.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

# A "fast" profile used by `cargo run --profile fast` and CI smoke runs:
# optimized but quick to compile.
[profile.fast]
inherits = "release"
lto = false
codegen-units = 16
panic = "unwind"
